# learn-jax

./: 01 Just-In-Time Compilation.ipynb  02 Automatic Vectorization.ipynb  03 Automatic Differentiation.ipynb  04 Debugging.ipynb  05 Pytrees.ipynb  06 Distributed Computing.ipynb  07 Stateful Computation.ipynb  08 JIT Control Flow and Logic.ipynb  README.md  pyproject.toml
prerequisites/: 00a Python Essentials.ipynb  00b NumPy Essentials.ipynb  00c Linear Algebra Essentials.ipynb
puzzles/: 01_jax_introduction_exercises.ipynb  01_jax_introduction_solutions.ipynb  02_data_operations_exercises.ipynb  02_data_operations_solutions.ipynb  03_pseudorandom_numbers_exercises.ipynb  03_pseudorandom_numbers_solutions.ipynb  04_justintime_jit_compilation_exercises.ipynb  04_justintime_jit_compilation_solutions.ipynb  05_control_flows_exercises.ipynb  05_control_flows_solutions.ipynb  06_automatic_differentiation_exercises.ipynb  06_automatic_differentiation_solutions.ipynb  07_automatic_vectorization_exercises.ipynb  07_automatic_vectorization_solutions.ipynb  08_pytrees_exercises.ipynb  08_pytrees_solutions.ipynb  09_neural_networks_exercises.ipynb  09_neural_networks_solutions.ipynb  10_capstone_exercises.ipynb  10_capstone_solutions.ipynb  README.md
