[project]
name = "learn-jax"
version = "0.1.0"
description = "Introductory notes on JAX and XLA with a focus on machine learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.7.0",
    "matplotlib>=3.10.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[tool.ruff]
line-length = 100
